# OpenMP-vs-Rust-Performance

./: README.md  run_benchmarks.sh  run_control_benchmarks.sh  run_overhead_benchmarks.sh  run_programmability_benchmarks.sh  run_scalability_benchmarks.sh
openMP/src/control/: control.c
openMP/src/programmability/: prefix_sum.c
openMP/src/runtime_overhead/: overhead.c
openMP/src/scalability/: matrix_multiply.c
rust/: .gitignore  Cargo.toml
rust/src/: README.md  main.rs
rust/src/controllability/: histogram.rs
rust/src/programmability/: prefix_sum.rs
rust/src/runtime_overhead/: mod.rs  runtime_overhead.rs
rust/src/scalability/: matrix_multiply.rs
