[package]
name = "openmp-rust-benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prefix_sum"
path = "src/programmability/prefix_sum.rs"

[[bin]]
name = "matrix_multiply"
path = "src/scalability/matrix_multiply.rs"

[[bin]]
name = "runtime_overhead"
path = "src/runtime_overhead/runtime_overhead.rs"

[[bin]]
name = "run_all_benchmarks"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
